[INJIWEB-1429] add test case for verification failed scenario
Signed-off-by: PuBHARGAVI <46226958+PuBHARGAVI@users.noreply.github.com>